Stop image overflow

--- a/public/stylesheets/base/base.scss
+++ b/public/stylesheets/base/base.scss
@@ -2,6 +2,10 @@ ul {
   list-style: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   cursor: pointer;
   color: black;
